nothing of note

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,5 @@
       <form action = "" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
-         <input type = "submit"/><br>
-         <h3>On Windows, your save file is located at: %USERPROFILE%\AppData\LocalLow\Super Spin Digital\Spin Rhythm XD\(your Steam ID)\savedata.dat </h3>
-         <h3>Uploading your save file here won't harm it of course, and by default Steam Cloud has a backup, but...</h3>
-         <h2>Make a copy of it anyways, then upload the copy! Can never be too safe</h2>
-         <h4>This currently only looks at XD difficulty, and only your number of attempts per song vs completions per song. More functionality planned in the future</h4>
-      </form>
-   </body>
-</html>
+
+           <p>Custom or3jq
