--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,22 @@
       <form action = "" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
+         <input type = "radio" id="easy" name="difficulty" value="easy">
+         <label for="easy">Easy</label>
+         <input type = "radio" id="medium" name="difficulty" value="medium">
+         <label for="medium">Medium</label>
+         <input type = "radio" id="hard" name="difficulty" value="hard">
+         <label for="hard">Hard</label>
+         <input type = "radio" id="expert" name="difficulty" value="expert">
+         <label for="expert">Expert</label>
+         <input type = "radio" id="XD" name="difficulty" value="XD" checked>
+         <label for="XD">XD</label>
+         <input type = "submit"/><br>
 
-           <p>Custom or3jq
+         <h3>On Windows, your save file is located at: %USERPROFILE%\AppData\LocalLow\Super Spin Digital\Spin Rhythm XD\(your Steam ID)\savedata.dat </h3>
+         <h3>Uploading your save file here won't harm it of course, and by default Steam Cloud has a backup, but...</h3>
+         <h2>Make a copy of it anyways, then upload the copy! Can never be too safe</h2>
+         <h4>This currently only looks at XD difficulty, and only your number of attempts per song vs completions per song. More functionality planned in the future</h4>
+      </form>
+   </body>
+</html>
