--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,10 @@
          <input type = "radio" id="XD" name="difficulty" value="XD" checked>
          <label for="XD">XD</label>
          <input type = "submit"/><br>
-
+         <h3>This currently shows your number of song attempts vs. number of completions. More functionality is planned, see <a href="https://github.com/kylefmohr/SpinSave.lol">https://github.com/kylefmohr/SpinSave.lol</a> to report an issue or request a feature!</h3>
          <h3>On Windows, your save file is located at: %USERPROFILE%\AppData\LocalLow\Super Spin Digital\Spin Rhythm XD\(your Steam ID)\savedata.dat </h3>
          <h3>Uploading your save file here won't harm it of course, and by default Steam Cloud has a backup, but...</h3>
          <h2>Make a copy of it anyways, then upload the copy! Can never be too safe</h2>
-         <h4>This currently only looks at XD difficulty, and only your number of attempts per song vs completions per song. More functionality planned in the future</h4>
       </form>
    </body>
 </html>
