--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
       <form action = "" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" /><br><br>
+         <input type = "radio" id="original" name="custom" value="original" checked>
+         <label for="original">Original Soundtrack</label><br>
+         <input type = "radio" id="custom" name="custom" value="custom">
+         <label for="custom">Custom Songs (limited to the first 50 songs you downloaded from <a href="https://spinsha.re">spinsha.re</a>, page may load for ~1 minute after you click submit)</label><br><br>
          <input type = "radio" id="easy" name="difficulty" value="easy">
          <label for="easy">Easy</label><br>
          <input type = "radio" id="medium" name="difficulty" value="medium">
@@ -22,8 +26,6 @@
          <input type = "submit"/><br>
          <h3>This currently shows your number of song attempts vs. number of completions. More functionality is planned, see <a href="https://github.com/kylefmohr/SpinSave.lol">https://github.com/kylefmohr/SpinSave.lol</a> to report an issue or request a feature!</h3>
          <h3>On Windows, your save file is located at: %USERPROFILE%\AppData\LocalLow\Super Spin Digital\Spin Rhythm XD\(your Steam ID)\savedata.dat </h3>
-         <h3>Uploading your save file here won't harm it of course, and by default Steam Cloud has a backup, but...</h3>
-         <h2>Make a copy of it anyways, then upload the copy! Can never be too safe</h2>
       </form>
    </body>
 </html>
