--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
    <body>
+      <script type="text/javascript">
+         function custom_or_original()
+         {
+            if(document.getElementById("custom").checked)
+            {
+               document.getElementById("custom_div").style.display = "block";
+            }
+            else
+            {
+               document.getElementById("custom_div").style.display = "none";
+            }
+         }
+      </script>
       <form action = "" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" /><br><br>
-         <input type = "radio" id="original" name="custom" value="original" checked>
+         <input type = "radio" onclick="custom_or_original()" id="original" name="custom" value="original" checked>
          <label for="original">Original Soundtrack</label><br>
-         <input type = "radio" id="custom" name="custom" value="custom">
-         <label for="custom">Custom Songs (limited to the first 50 songs you downloaded from <a href="https://spinsha.re">spinsha.re</a>, page may load for ~1 minute after you click submit)</label><br><br>
+         <input type = "radio" onclick="custom_or_original()" id="custom" name="custom" value="custom">
+
+         <label for="custom">Custom Songs</label>
+         <div id="custom_div" style="display:none">
+            <p>(limited to the first 50 songs you downloaded from <a href="https://spinsha.re">spinsha.re</a>, page may load for ~1 minute after you click submit)</p>
+
+         </div>
+         <br><br>
          <input type = "radio" id="easy" name="difficulty" value="easy">
          <label for="easy">Easy</label><br>
          <input type = "radio" id="medium" name="difficulty" value="medium">
