fixed which custom songs are chosen for the chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
          <label for="custom">Custom Songs</label>
          <div id="custom_div" style="display:none">
-            <p>(limited to the first 50 songs you downloaded from <a href="https://spinsha.re">spinsha.re</a>, page may load for ~1 minute after you click submit)</p>
+            <p>(limited to 50 songs you downloaded from <a href="https://spinsha.re">spinsha.re</a>, in order of song attempts. page may load for ~1 minute after you click submit)</p>
 
          </div>
          <br><br>
