--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,7 @@
             }
          }
       </script>
-      <form action = "" method = "POST"
-         enctype = "multipart/form-data">
+      <form action = "/upload" method = "post" enctype = "multipart/form-data">
          <input type = "file" name = "file" /><br><br>
          <input type = "radio" onclick="custom_or_original()" id="original" name="custom" value="original" checked>
          <label for="original">Original Soundtrack</label><br>
