fix for SRXD 1.0 save file format

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,8 @@
          <label for="expert">Expert</label><br>
          <input type = "radio" id="XD" name="difficulty" value="XD" checked>
          <label for="XD">XD</label><br>
+         <input type = "radio" id="remixd" name="difficulty" value="remixd">
+         <label for="remixd">RemiXD</label><br><br>
          <p>Sort by: <p>
          <input type = "radio" id="Attempts" name="sort" value="Attempts" checked>
          <label for="Attempts">Attempts</label><br>
